fixed image centering on mobile devices for movie details page

--- a/src/pages/MovieDetail/MovieDetail.css
+++ b/src/pages/MovieDetail/MovieDetail.css
@@ -23,6 +23,20 @@
 
 @media only screen and (max-width: 600px) {
 
+    .img-column {
+        display: flex;
+        justify-content: center;
+    }
+
+    ul {
+        padding-left: 0px;
+    }
+
+    .info-column {
+        text-align: center;
+        padding-bottom: 20px
+    }
+
     .detailsImg {
         width: 328px;
         margin: 0 auto;
@@ -38,7 +52,7 @@
     .movieInfo {
         color: white;
         list-style: none;
-        font-size: 20px;
+        font-size: 22px;
         font-family: 'Secular One';
         padding-top: 8px;
     }
